# gd-connect

./: .gitignore  README.md  pyproject.toml  requirements.txt  sample.txt  setup.py
docs/: credentials_setup.txt
gd_connect/: __init__.py  auth.py  cli.py  drive.py  utils.py
tests/: test_gd_connect.py
